<resources>
    <string name="app_name">Navigation Keshari</string>

    <string name="navigation_guidance_day" translatable="false">http://95.217.212.221:8080/style/style.json</string>
    <string name="navigation_guidance_night" translatable="false">http://95.217.212.221:8080/style/style.json</string>
    <string name="start_navigation">START</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="navigation_keshari">Navigation Keshari</string>
    <string name="my_saves">My Saves</string>
    <string name="apps">Apps</string>
    <string name="share_my_location">Share My Location</string>
    <string name="get_ppin">Get Ppin</string>
    <string name="add_places">Add Places</string>
    <string name="settings">Settings</string>
    <string name="whats_new">Whats New</string>
    <string name="feedback">FeedBack</string>
    <string name="rate_us_on_playstore">Rate Us On Playstore</string>
    <string name="contributions">Contributions</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="developerimage">DeveloperImage</string>
    <string name="no_places_saved_yet">No Places Saved Yet</string>
    <string name="tell_us">TELL US!</string>
    <string name="your_feedback_is_valuable_for_us">Your Feedback is valuable for us.</string>
    <string name="sign_in">Sign IN</string>

</resources>
